add all the starter pages

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               class="relative z-20 w-full flex justify-between lg:w-max md:px-0"
             >
               <a
-                href="#home"
+                href="index.html"
                 aria-label="logo"
                 class="flex space-x-2 items-center"
               >
@@ -105,7 +105,7 @@
                 >
                   <li>
                     <a
-                      href="#features"
+                      href="index.html"
                       class="block md:px-4 transition hover:text-[#9333EA]"
                     >
                       <span>Home</span>
@@ -113,7 +113,7 @@
                   </li>
                   <li>
                     <a
-                      href="#solution"
+                      href="services.html"
                       class="block md:px-4 transition hover:text-[#9333EA]"
                     >
                       <span>Services</span>
@@ -121,7 +121,7 @@
                   </li>
                   <li>
                     <a
-                      href="#testimonials"
+                      href="about.html"
                       class="block md:px-4 transition hover:text-[#9333EA]"
                     >
                       <span>About</span>
@@ -129,7 +129,7 @@
                   </li>
                   <li>
                     <a
-                      href="#blog"
+                      href="contact.html"
                       class="block md:px-4 transition hover:text-[#9333EA]"
                     >
                       <span>Contact</span>
@@ -137,7 +137,7 @@
                   </li>
                   <li>
                     <a
-                      href="#blog"
+                      href="privacy.html"
                       class="block md:px-4 transition hover:text-[#9333EA]"
                     >
                       <span>Privacy</span>
@@ -1978,8 +1978,8 @@
       <div class="w-full flex flex-col gap-1">
         <p class="text-center text-sm">©Copyright <a href="#" class="font-bold">ahoi llc</a> All Rights Reserved</p>
         <div class="flex flex-col sm:flex-row justify-center items-center gap-2">
-          <a class="!text-[12px] !font-normal cursor-pointer underline">Privacy Policy - Term and Conditions</a>
-          <a class="!text-[12px] !font-normal cursor-pointer underline">Contact Us</a>
+          <a href="privacy.html" class="!text-[12px] !font-normal cursor-pointer underline">Privacy Policy - Term and Conditions</a>
+          <a href="contact.html" class="!text-[12px] !font-normal cursor-pointer underline">Contact Us</a>
         </div>
       </div>
     </footer>
