--- a/index.html
+++ b/index.html
@@ -187,12 +187,13 @@
             >
               Next Generation Communication
               <span
-                class="bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
+                class="bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text 
+                sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
               >
                 platform.
               </span>
             </h1>
-            <p class="mt-8 text-gray-700 dark:text-gray-300">
+            <p class="mt-8 text-black-700 dark:text-black-300 sm:text-gray-700 sm:dark:text-gray-300">
               Powering Communication, Simplifying Connections
             </p>
             <div class="mt-10 flex flex-wrap justify-center gap-y-4 gap-x-6">
@@ -281,7 +282,7 @@
       <div class="my-10 px-6">
         <div class="text-center py-5">
           <span
-            class="bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
+            class="text-5xl md:text-6xl bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
             >features.</span
           >
           <p class="mt-6 text-gray-600">
@@ -701,7 +702,7 @@
         <div class="mx-auto px-6 max-w-6xl">
           <div class="text-center">
             <span
-              class="bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
+              class="text-5xl md:text-6xl bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
               >services.</span
             >
             <p class="mt-6 text-gray-600">
@@ -1470,7 +1471,7 @@
       <div class="max-w-6xl m-auto">
         <div class="text-center mb-10">
           <span
-            class="bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
+            class="text-5xl md:text-6xl bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
             >pricing.</span
           >
           <p class="mt-6 text-gray-600">
@@ -1881,7 +1882,7 @@
     <section class="w-full m-auto p-10">
       <div class="text-center mb-10">
         <span
-          class="bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
+          class="text-5xl md:text-6xl bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
           >contact Us.</span
         >
         <p class="mt-6 text-gray-600">
