fix text allignment

--- a/index.html
+++ b/index.html
@@ -1404,7 +1404,9 @@
             3000
           </h5>
           <p
-            class="!m-0 mb-3 font-normal font-bold text-lg bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
+            class="text-center !m-0 mb-3 font-normal font-bold text-lg bg-gradient-to-r from-[#058abb] via-[#0c529f] 
+            to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none 
+            sm:dark:text-white"
           >
             <strong>Thousands of Connections</strong> on platform
           </p>
@@ -1421,7 +1423,9 @@
             1000000000
           </h5>
           <p
-            class="!m-0 mb-3 font-normal font-bold text-lg bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
+            class="text-center !m-0 mb-3 font-normal font-bold text-lg bg-gradient-to-r from-[#058abb] via-[#0c529f] 
+            to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none 
+            sm:dark:text-white"
           >
             <strong>Billions</strong> of calls processed
           </p>
@@ -1441,7 +1445,7 @@
             1000000
           </h5>
           <p
-            class="!m-0 mb-3 font-normal font-bold text-lg bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
+            class="text-center !m-0 mb-3 font-normal font-bold text-lg bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
           >
             <strong>Over one million numbers</strong> routing
           </p>
@@ -1457,7 +1461,7 @@
             2000
           </h5>
           <p
-            class="!m-0 mb-3 font-normal font-bold text-lg bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
+            class="text-center !m-0 mb-3 font-normal font-bold text-lg bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
           >
             <strong>Thousands of</strong> end user devices
           </p>
