--- a/index.html
+++ b/index.html
@@ -1716,11 +1716,11 @@
       <div class="block md:flex gap-5">
         <div class="text-center mb-10">
           <span
-            class="font-bold text-2xl sm:text-5xl md:text-6xl bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
+            class="font-bold text-4xl sm:text-5xl md:text-6xl bg-gradient-to-r from-[#058abb] via-[#0c529f] to-[#096bac] text-transparent bg-clip-text sm:dark:text-white sm:dark:bg-none sm:dark:text-white"
             ><span class="!text-gray-500">frequently Asked</span
             >&nbsp;Questions.</span
           >
-          <p class="mt-6 text-xl text-gray-600">
+          <p class="mt-6 text-lg sm:text-xl text-gray-600">
             Essential FAQs: Your Questions About Ahoi Answered
           </p>
         </div>
